--- a/static/scss/css/style.css
+++ b/static/scss/css/style.css
@@ -284,7 +284,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   width: 100%;
   min-height: 150px;
   max-height: 500px;
@@ -293,7 +293,6 @@
   gap: 10px;
   list-style: none;
   padding: 10px;
-  padding-top: 70px;
 }
 .urlInputCol .showPreviousUrls ul li {
   width: 100%;
@@ -423,7 +422,7 @@
     margin-top: 10px;
   }
   .urlInputCol .showPreviousUrls ul {
-    padding-top: 0;
+    padding-top: 0px;
   }
   .urlInputCol .showPreviousUrls ul li {
     flex-direction: column;
@@ -441,6 +440,16 @@
     flex-direction: column;
   }
   .urlStatisticsRow .staticsCard .cardWrapper::before {
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 10px;
+    height: 100px;
+  }
+  .urlStatisticsRow .staticsCard .cardWrapper:nth-child(1)::before {
+    display: block;
+  }
+  .urlStatisticsRow .staticsCard .cardWrapper:nth-child(3)::before {
     display: none;
   }
 }
